syntax = "proto3";

package qan;

option go_package = "qanpb";

import "google/protobuf/struct.proto";

// ExampleFormat is format of query example: real or query without values.
enum ExampleFormat {
  EXAMPLE_FORMAT_INVALID = 0;
  EXAMPLE = 1;
  FINGERPRINT = 2;
}

// ExampleType is a type of query example selected for this query class in given period of time.
enum ExampleType {
  EXAMPLE_TYPE_INVALID = 0;
  RANDOM = 1;
  SLOWEST = 2;
  FASTEST = 3;
  WITH_ERROR = 4;
}

// Point contains values that represents abscissa (time) and ordinate (volume etc.)
// of every point in a coordinate system of Sparklines.
message Point {
  // NullFloat represents a union of float value and null.
  message NullFloat {
    float value = 1;
    bool null = 2;
  }
  map<string, NullFloat> values1 = 1; // nulls in message
  map<string, float> values2 = 2; // nulls are NaNs
  map<string, float> values3 = 3; // nulls in nulls3
  map<string, bool> nulls3 = 4;
  float point = 5;
  float time_frame = 6;
  float timestamp = 7;
}
